--- a/package.json
+++ b/package.json
@@ -1,20 +1,17 @@
 {
   "name": "seb-storybook-test",
-  "version": "1.0.16",
+  "version": "1.0.53",
   "description": "just playing around",
-  "main": "dist/index.js",
-  "module": "dist/index.es.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "build-lib": "rollup -c --bundleConfigAsCjs"
+    "build-lib": "rollup -c --bundleConfigAsCjs",
+    "rmdir": "node -e \"var fs = require('fs'); process.argv.slice(1).map((fpath) => fs.rmdirSync(fpath, { recursive: true })); process.exit(0);\"",
+    "build-publish": "npm run build-lib && copy package.json dist && copy .npmrc dist && cd dist && npm publish",
+    "build-publish-cleanup": "(npm run build-publish && npm run rmdir -- dist) || npm run rmdir -- dist"
   },
-  "files": [
-    "dist/*"
-  ],
-  "prepublishOnly": "npm run build-lib && cp -r ./lib/* . && rm -rf ./lib",
-  "postpublish": "git clean -fd",
   "author": "Sebastian Meckovski",
   "license": "ISC",
   "devDependencies": {
