--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "seb-storybook-test",
-  "version": "1.0.53",
+  "version": "1.0.54",
   "description": "just playing around",
-  "main": "index.js",
+  "main": "SebComponents.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "storybook": "start-storybook -p 6006",
