--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "seb-storybook-test",
   "version": "1.0.55",
   "description": "just playing around",
-  "main": "SebComponents.js",
+  "main": "dist/SebComponents.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "storybook": "start-storybook -p 6006",
