--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "seb-storybook-test",
-  "version": "1.0.55",
+  "name": "seb-curved-line-drawer",
+  "version": "1.0.2",
   "description": "just playing around",
   "main": "dist/SebComponents.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "build-lib": "rollup -c --bundleConfigAsCjs",
+    "build-lib": "rollup -c",
     "rmdir": "node -e \"var fs = require('fs'); process.argv.slice(1).map((fpath) => fs.rmdirSync(fpath, { recursive: true })); process.exit(0);\"",
-    "build-publish": "npm run build-lib && copy package.json dist && copy .npmrc dist && cd dist && npm publish",
+    "build-publish": "npm run build-lib && copy package.json dist && copy .npmrc dist && cd dist && npm run publish",
     "build-publish-cleanup": "(npm run build-publish && npm run rmdir -- dist) || npm run rmdir -- dist"
   },
   "author": "Sebastian Meckovski",
