--- a/package.json
+++ b/package.json
@@ -5,64 +5,23 @@
 	"main": "dist/SebComponents.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"storybook": "start-storybook -p 6006",
-		"build-storybook": "build-storybook",
-		"build-lib": "rollup -c --bundleConfigAsCjs",
-		"rmdir": "node -e \"var fs = require('fs'); process.argv.slice(1).map((fpath) => fs.rmdirSync(fpath, { recursive: true })); process.exit(0);\"",
-		"build-publish": "npm run build-lib && copy package.json dist && copy .npmrc dist && cd dist && npm run publish",
-		"build-publish-cleanup": "(npm run build-publish && npm run rmdir -- dist) || npm run rmdir -- dist"
-	},
+		"storybook": "storybook dev -p 6006",
+		"build-storybook": "storybook build"
+	  },
 	"author": "Sebastian Meckovski",
 	"license": "ISC",
-	"devDependencies": {
-		"@babel/cli": "^7.18.10",
-		"@rollup/plugin-commonjs": "^23.0.0",
-		"@rollup/plugin-json": "^5.0.0",
-		"@rollup/plugin-node-resolve": "^15.0.0",
-		"@storybook/addon-a11y": "^6.5.14",
-		"@storybook/addon-actions": "^6.5.14",
-		"@storybook/addon-console": "^1.2.3",
-		"@storybook/addon-docs": "^6.5.14",
-		"@storybook/addon-essentials": "^6.5.14",
-		"@storybook/addon-interactions": "^6.5.14",
-		"@storybook/addon-links": "^6.5.14",
-		"@storybook/builder-webpack5": "^6.5.14",
-		"@storybook/manager-webpack5": "^6.5.14",
-		"@storybook/node-logger": "^6.5.14",
-		"@storybook/preset-create-react-app": "^4.1.2",
-		"@storybook/react": "^6.5.14",
-		"@storybook/testing-library": "^0.0.13",
-		"@testing-library/jest-dom": "^5.16.5",
-		"@testing-library/react": "^13.4.0",
-		"@testing-library/user-event": "^13.5.0",
-		"auto": "^10.37.4",
-		"axios": "^1.1.3",
-		"babel-plugin-named-exports-order": "^0.0.2",
-		"chromatic": "^6.10.1",
-		"cross-env": "^7.0.3",
-		"css-loader": "^6.7.1",
-		"prop-types": "^15.8.1",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
-		"react-icons": "^4.4.0",
-		"react-scripts": "5.0.1",
-		"rollup": "^3.1.0",
-		"rollup-plugin-babel": "^4.4.0",
-		"rollup-plugin-peer-deps-external": "^2.2.4",
-		"rollup-plugin-postcss": "^4.0.2",
-		"rollup-plugin-scss": "^3.0.0",
-		"rollup-plugin-terser": "^7.0.2",
-		"storybook-addon-mock": "^3.2.0",
-		"storybook-addon-sass-postcss": "^0.1.3",
-		"style-loader": "^3.3.1",
-		"web-vitals": "^2.1.4",
-		"webpack": "^5.74.0"
-	},
-	"dependencies": {
-		"@storybook/addons": "^6.5.14",
-		"@storybook/theming": "^6.5.14",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
-		"storybook-addon-themes": "^6.1.0"
-	}
+  "devDependencies": {
+    "@storybook/addon-essentials": "^7.6.17",
+    "@storybook/addon-interactions": "^7.6.17",
+    "@storybook/addon-links": "^7.6.17",
+    "@storybook/addon-onboarding": "^1.0.11",
+    "@storybook/blocks": "^7.6.17",
+    "@storybook/react": "^7.6.17",
+    "@storybook/react-webpack5": "^7.6.17",
+    "@storybook/test": "^7.6.17",
+    "prop-types": "^15.8.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "storybook": "^7.6.17"
+  }
 }
