--- a/package.json
+++ b/package.json
@@ -1,27 +1,37 @@
 {
-	"name": "seb-curved-line-drawer",
-	"version": "1.0.10",
+	"name": "seb-components-library",
+	"version": "1.0.5",
 	"description": "just playing around",
-	"main": "dist/SebComponents.js",
+	"main": "dist/index.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"storybook": "storybook dev -p 6006",
-		"build-storybook": "storybook build"
-	  },
+		"build-storybook": "storybook build",
+		"build": "webpack"
+	},
+	"files": ["dist"],
 	"author": "Sebastian Meckovski",
 	"license": "ISC",
-  "devDependencies": {
-    "@storybook/addon-essentials": "^7.6.17",
-    "@storybook/addon-interactions": "^7.6.17",
-    "@storybook/addon-links": "^7.6.17",
-    "@storybook/addon-onboarding": "^1.0.11",
-    "@storybook/blocks": "^7.6.17",
-    "@storybook/react": "^7.6.17",
-    "@storybook/react-webpack5": "^7.6.17",
-    "@storybook/test": "^7.6.17",
-    "prop-types": "^15.8.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "storybook": "^7.6.17"
-  }
+	"devDependencies": {
+		"@babel/core": "^7.24.0",
+		"@babel/preset-env": "^7.24.0",
+		"@babel/preset-react": "^7.23.3",
+		"@storybook/addon-essentials": "^7.6.17",
+		"@storybook/addon-interactions": "^7.6.17",
+		"@storybook/addon-links": "^7.6.17",
+		"@storybook/addon-onboarding": "^1.0.11",
+		"@storybook/blocks": "^7.6.17",
+		"@storybook/react": "^7.6.17",
+		"@storybook/react-webpack5": "^7.6.17",
+		"@storybook/test": "^7.6.17",
+		"babel-loader": "^9.1.3",
+		"prop-types": "^15.8.1",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"source-map-loader": "^5.0.0",
+		"storybook": "^7.6.17",
+		"webpack": "^5.90.3",
+		"webpack-cli": "^5.1.4",
+		"webpack-node-externals": "^3.0.0"
+	}
 }
