--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,9 @@
     "paths": {}, // A series of entries which re-map imports to lookup locations relative to the baseUrl
 
     // Source Map
-    "sourceMap": false, // enables the use of source maps for debuggers and error reporting etc
+    "sourceMap": true, // enables the use of source maps for debuggers and error reporting etc
+    "sourceRoot": "/", // Specify the location where a debugger should locate TypeScript files instead of relative source locations.
+
     // Strict Checks
     "alwaysStrict": true, // Ensures that your files are parsed in the ECMAScript strict mode, and emit “use strict” for each source file.
     "allowUnreachableCode": false, // pick up dead code paths
@@ -35,6 +37,6 @@
   },
   "include": ["./**/*.ts"],
   "exclude": [
-    "node_modules/**/*"
+    "node_modules/**/*", "webpack.config.ts"
   ]
 }
