--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "seb-components-library",
-	"version": "1.0.15",
+	"version": "1.0.18",
 	"description": "Sebastian's personal component library",
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
@@ -23,22 +23,29 @@
 		"@storybook/addon-interactions": "^7.6.17",
 		"@storybook/addon-links": "^7.6.17",
 		"@storybook/addon-onboarding": "^1.0.11",
+		"@storybook/addon-styling-webpack": "^0.0.6",
 		"@storybook/blocks": "^7.6.17",
 		"@storybook/react": "^7.6.17",
 		"@storybook/react-webpack5": "^7.6.17",
 		"@storybook/test": "^7.6.17",
 		"babel-loader": "^9.1.3",
+		"css-loader": "^6.10.0",
+		"postcss": "^8.4.35",
+		"postcss-loader": "^8.1.1",
 		"prop-types": "^15.8.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"resolve-url-loader": "^5.0.0",
 		"sass-loader": "^14.1.1",
 		"source-map-loader": "^5.0.0",
 		"storybook": "^7.6.17",
+		"style-loader": "^3.3.4",
 		"ts-loader": "^9.5.1",
 		"typescript": "^5.3.3"
 	},
 	"dependencies": {
 		"sass": "^1.71.1",
+		"storybook-addon-sass-postcss": "^0.2.0",
 		"webpack": "^5.90.3",
 		"webpack-cli": "^5.1.4",
 		"webpack-node-externals": "^3.0.0"
