--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "seb-components-library",
-	"version": "1.0.40",
+	"version": "1.0.55",
 	"description": "Sebastian's personal component library",
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
@@ -30,6 +30,7 @@
 		"@storybook/test": "^7.6.17",
 		"babel-loader": "^9.1.3",
 		"css-loader": "^6.10.0",
+		"file-loader": "^6.2.0",
 		"postcss": "^8.4.35",
 		"postcss-loader": "^8.1.1",
 		"prop-types": "^15.8.1",
@@ -41,7 +42,8 @@
 		"storybook": "^7.6.17",
 		"style-loader": "^3.3.4",
 		"ts-loader": "^9.5.1",
-		"typescript": "^5.3.3"
+		"typescript": "^5.3.3",
+		"url-loader": "^4.1.1"
 	},
 	"dependencies": {
 		"sass": "^1.71.1",
