--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "build": "webpack",
-    "chromatic": "npx chromatic --project-token=REACT_APP_CHROMATIC"
+    "chromatic": "npx chromatic --project-token=REACT_APP_CHROMATIC",
+    "test": "jest"
   },
   "files": [
     "dist"
@@ -31,20 +31,33 @@
     "@storybook/react": "^7.6.17",
     "@storybook/react-webpack5": "^7.6.17",
     "@storybook/test": "^7.6.17",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.2.1",
+    "@types/jest": "^29.5.12",
+    "@types/react": "^18.2.61",
+    "@types/react-dom": "^18.2.19",
+    "babel-jest": "^29.7.0",
     "babel-loader": "^9.1.3",
     "chromatic": "^11.0.0",
     "css-loader": "^6.10.0",
     "file-loader": "^6.2.0",
+    "i": "^0.3.7",
+    "jest": "^29.7.0",
+    "jest-css-modules-transform": "^4.4.2",
+    "jest-environment-jsdom": "^29.7.0",
+    "npm": "^10.5.0",
     "postcss": "^8.4.35",
     "postcss-loader": "^8.1.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-test-renderer": "^18.2.0",
     "resolve-url-loader": "^5.0.0",
     "sass-loader": "^14.1.1",
     "source-map-loader": "^5.0.0",
     "storybook": "^7.6.17",
     "style-loader": "^3.3.4",
+    "ts-jest": "^29.1.2",
     "ts-loader": "^9.5.1",
     "typescript": "^5.3.3",
     "url-loader": "^4.1.1"
