--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "seb-components-library",
-  "version": "1.0.56",
+  "version": "1.0.58",
   "description": "Sebastian's personal component library",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -22,6 +22,7 @@
     "@babel/core": "^7.24.0",
     "@babel/preset-env": "^7.24.0",
     "@babel/preset-react": "^7.23.3",
+    "@storybook/addon-console": "^3.0.0",
     "@storybook/addon-essentials": "^7.6.17",
     "@storybook/addon-interactions": "^7.6.17",
     "@storybook/addon-links": "^7.6.17",
@@ -45,6 +46,7 @@
     "jest": "^29.7.0",
     "jest-css-modules-transform": "^4.4.2",
     "jest-environment-jsdom": "^29.7.0",
+    "jest-transform-stub": "^2.0.0",
     "npm": "^10.5.0",
     "postcss": "^8.4.35",
     "postcss-loader": "^8.1.1",
