--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,12 +4,12 @@ stages:
 
 run_tests:
   rules:
-    - if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/auto-deploy-test' }}
+    - if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' && !contains(github.event.head_commit.message, 'AUTOMATIC VERSION BUMP') }}
   image: node:18-alpine3.17
   before_script:
     - npm i jest@29.7.0
   script:
-    - npm run test
+    - npm test
 
 version_bump:
   rules:
