--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,8 +3,10 @@ stages:
   - version-bump
 
 run_tests:
-  rules:
-    - if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' && !contains(github.event.head_commit.message, 'AUTOMATIC VERSION BUMP') }}
+  on:
+    push:
+      branches:
+        - auto-deploy-test
   image: node:18-alpine3.17
   before_script:
     - npm i jest@29.7.0
