--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   run_tests:
     runs-on: ubuntu-latest
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main' && !contains(github.event.head_commit.message, 'AUTOMATIC VERSION BUMP')
+    if: github.event_name == 'push' || github.event_name == 'pull_request'
     container:
       image: node:18-alpine3.17
     steps:
@@ -18,6 +18,7 @@ jobs:
         run: npm i jest@29.7.0
       - name: Run tests
         run: npm test
+
 
   version_bump:
     runs-on: ubuntu-latest
