--- a/.github/workflows/update-version.yml
+++ b/.github/workflows/update-version.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   version_bump:
     runs-on: ubuntu-latest
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main' && !contains(github.event.head_commit.message, 'AUTOMATIC VERSION BUMP')
+    if: github.event_name == 'push' && github.ref == 'refs/heads/master' && !contains(github.event.head_commit.message, 'AUTOMATIC VERSION BUMP')
     container:
       image: node:18-buster
     steps:
