checking if git directory

--- a/.github/workflows/update-version.yml
+++ b/.github/workflows/update-version.yml
@@ -3,7 +3,7 @@ name: Version Bump
 on:
   push:
     branches:
-      - master
+      - main
 
 jobs:
   version_bump:
@@ -15,11 +15,11 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
       - name: Verify Git Directory
-      run: |
-        if [ ! -d ".git" ]; then
-          echo "Not a git directory"
-          exit 1
-        fi
+        run: |
+          if [ ! -d ".git" ]; then
+            echo "Not a git directory"
+            exit 1
+          fi
       - name: Install dependencies
         run: |
           yarn add webpack@5.89.0
