--- a/.github/workflows/update-version.yml
+++ b/.github/workflows/update-version.yml
@@ -43,12 +43,12 @@ jobs:
         run: |
           git config user.email "sebastian.meckovski@gmail.com"
           git config user.name "Sebastian Meckovski"
-          git remote set-url origin https://sebastian-meckovski:${{ secrets.AUTO_VERSION_TOKEN }}@github.com/sebastian-meckovski/Seb-Storybook.git
+          git remote set-url github-origin https://sebastian-meckovski:${{ secrets.AUTO_VERSION_TOKEN }}@github.com/sebastian-meckovski/Seb-Storybook.git
       - name: Commit and push changes
         run: |
           git add .
           git commit -m "AUTOMATIC VERSION BUMP"
-          git push origin HEAD:main
+          git push github-origin HEAD:master
       - name: Publish to npm
         run: |
           echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > .npmrc
