--- a/.github/workflows/update-version.yml
+++ b/.github/workflows/update-version.yml
@@ -41,6 +41,7 @@ jobs:
           sed -i "2i \ " CHANGELOG.md
       - name: Configure Git
         run: |
+          git pull
           git config user.email "sebastian.meckovski@gmail.com"
           git config user.name "Sebastian Meckovski"
           git remote set-url github-origin https://sebastian-meckovski:${{ secrets.AUTO_VERSION_TOKEN }}@github.com/sebastian-meckovski/Seb-Storybook.git
