--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "sass": "^1.71.1",
     "storybook-addon-sass-postcss": "^0.3.0",
-    "webpack": "5.89.0",
+    "webpack": "^5.94.0",
     "webpack-cli": "^5.1.4",
     "webpack-node-externals": "^3.0.0"
   }
