--- a/.github/workflows/update-version.yml
+++ b/.github/workflows/update-version.yml
@@ -29,8 +29,9 @@ jobs:
           FIRST_MERGE_REQUEST=$(echo "$API_RESPONSE" | jq -r '.[0]')
 
           DESCRIPTION=$(echo "$FIRST_MERGE_REQUEST" | jq -r '.body')
+          echo $FIRST_MERGE_REQUEST
+          echo $DESCRIPTION
           sed -i "2i - Description: ${DESCRIPTION}" CHANGELOG.md
-
           sed -i "2i ## ${PACKAGE_VERSION} (${VAR_TIME})" CHANGELOG.md
           sed -i "2i \ " CHANGELOG.md
       - name: Configure Git
