--- a/.github/workflows/update-version.yml
+++ b/.github/workflows/update-version.yml
@@ -34,6 +34,7 @@ jobs:
           sed -i "2i - Description: ${DESCRIPTION}" CHANGELOG.md
           sed -i "2i ## ${PACKAGE_VERSION} (${VAR_TIME})" CHANGELOG.md
           sed -i "2i \ " CHANGELOG.md
+          git status
       - name: Configure Git
         run: |
           git config --global --add safe.directory '*'
