--- a/.github/workflows/update-version.yml
+++ b/.github/workflows/update-version.yml
@@ -28,10 +28,20 @@ jobs:
           VAR_TIME=$(date '+%Y-%m-%d')
           API_RESPONSE=$(curl --request GET "https://api.github.com/repos/sebastian-meckovski/Seb-Storybook/pulls?state=closed" --header "PRIVATE-TOKEN: ${{ secrets.AUTO_VERSION_TOKEN }}")
           FIRST_MERGE_REQUEST=$(echo "$API_RESPONSE" | jq -r '.[0]')
+          
           DESCRIPTION=$(echo "$FIRST_MERGE_REQUEST" | jq -r '.body')
+          AUTHOR=$(echo "$FIRST_MERGE_REQUEST" | jq -r '.user.login')
+          PR_URL=$(echo "$FIRST_MERGE_REQUEST" | jq -r '.html_url')
+          TITLE=$(echo "$FIRST_MERGE_REQUEST" | jq -r '.title')
+          
+          echo "$FIRST_MERGE_REQUEST"
           echo "$DESCRIPTION"
-          sed -i "2i ## ${PACKAGE_VERSION} (${VAR_TIME})\n- Description: ${DESCRIPTION}\n" CHANGELOG.md
-          git status
+          echo "$AUTHOR"
+          echo "$PR_URL"
+          echo "$TITLE"
+          
+          # Add version, description, author, PR URL, and title to CHANGELOG.md
+          sed -i "2i ## ${PACKAGE_VERSION} (${VAR_TIME})\n- Description: ${DESCRIPTION}\n- Author: ${AUTHOR}\n- Pull request URL: ${PR_URL}\n- Title: ${TITLE}\n" CHANGELOG.md
       - name: Configure Git
         run: |
           git config user.email "sebastian.meckovski@gmail.com"
